# innowise-ml-internship-temp

./: .gitignore  docker-compose.yaml  pyproject.toml  run_pipeline.py
.github/workflows/: deploy.yml  docker-publish.yml
config/: airflow.cfg
dags/: ml_pipeline.py
docker/: Dockerfile
notebooks/: ETL_Layer.ipynb  Experiments_with_models_collab.ipynb  data_dqc.ipynb  model_train_for_test.ipynb
scripts/: ETL.py  Model.py  Validation.py
src/model_kaggle_vaveyko/: __init__.py  etl.py
