[project]
name = "innowise-ml-internship-temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==22.6.0",
    "flake8==6.0.0",
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "pre-commit==4.0.1",
    "rapidfuzz==3.14.3",
    "seaborn==0.13.2",
    "tqdm==4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "notebook>=7.5.5",
]
