[project]
name = "model_kaggle_vaveyko"
version = "0.1.2"
description = "Add your description here"
requires-python = ">=3.12"
authors = [{name = "vaveyko"}]
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.8.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit==4.0.1",
    "flake8==6.0.0",
    "black==22.6.0",
    "build>=1.4.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.5",
    "setuptools>=82.0.1",
    "twine>=6.2.0",
]
experiments = [
    "seaborn==0.13.2",
    "shap>=0.51.0",
    "tqdm==4.67.3",
    "xgboost>=3.2.0",
    "catboost>=1.2.10",
    "matplotlib==3.10.8",
]
